# openapi.yaml
@@ -1,4 +1,4 @@
-openapi: 3.1.0
+openapi: 3.0.1
 info:
   title: Dog API Server
   description: API para gerenciar raças de cães e favoritos.
@@ -236,7 +236,7 @@ paths:
             default: json
       responses:
         '200':
-          description: List of favorites
+          description: List of favorites in the specified format
           content:
             application/json:
               schema:
@@ -248,6 +248,32 @@ paths:
                       type: integer
                     url:
                       type: string
+            application/xml:
+              schema:
+                type: object
+                properties:
+                  favorites:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: integer
+                        url:
+                          type: string
+            application/x-protobuf:
+              schema:
+                type: object
+                properties:
+                  favorites:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: integer
+                        url:
+                          type: string
         '500':
           description: Internal server error
 
